Fix side panel stretching issue

--- a/css/blocks/forum.css
+++ b/css/blocks/forum.css
@@ -46,6 +46,7 @@
     display: flex;
     flex-wrap: wrap-reverse;
     gap: 20px;
+    align-items: flex-end;
 }
 
 .forum__threads {
